--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,8 @@
          function renderMatches(word,data){
           $.each(data.synonyms, function(key,syn){
             $('#result-matches').append('<ul id="result-matches" class="list-group">');
-            $('#result-matches').append('<li class="list-group-item text-success">'+ word + ' - '+ syn.details+' - '+syn.words+'</li>');
+            $('#result-matches').append('<li class="list-group-item text-success">'+ syn.matched_word + ' - '+ syn.summary+'</li>');
+            $('#result-matches').append('<li class="list-group-item text-default">' + syn.details+'</li>');
             $('#result-matches').append('<li class="list-group-item text-info">' +'अमरकोष: - '+ syn.shloka+'</li>');
             $('#result-matches').append('</ul>');
           });
